# cv-evaluator

./: .env.example  Dockerfile  README.md  docker-compose.yaml  extracted_job_description.json  extracted_project_evaluator.json  extracted_resume.json  extracted_resume_evaluator.json  main.py  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  generators.baml  job_description.baml  project_evaluator.baml  resume.baml  resume_evaluator.baml
docs/schemas/: schemas.dbml
model/: db.py  document.py  evaluation_result.py
model/requests/: body.py
model/responses/: evaluate.py  result.py
