[project]
name = "rakamin-recruitment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "baml-py>=0.208.5",
  "docling>=2.54.0",
  "fastapi[standard]>=0.117.1",
  "langchain-docling>=1.1.0",
  "langchain[google-genai]>=0.3.27",
  "langgraph>=0.6.7",
  "psycopg2-binary>=2.9.10",
  "sqlmodel>=0.0.25",
]
